# bolt

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE.md  dependabot.yml  justfile  lido-keys-api.sh
.github/: .linkspector.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  feature.yml
.github/workflows/: audit.yml  bolt_boost_ci.yml  bolt_cli_ci.yml  bolt_cli_release_bins.yml  bolt_sidecar_ci.yml  cli-ci.yml  contracts-ci.yml  contracts_ci.yml  docker-build-cmd.yml  linkspector.yml
bolt-boost/: Cargo.toml  Cross.Dockerfile  Cross.toml  Dockerfile  Dockerfile copy  DockerfileLocal  README.md
bolt-boost/src/: constraints.rs  error.rs  lib.rs  main.rs  metrics.rs  proofs.rs  server.rs  testutil.rs  types.rs
bolt-boost/testdata/: signed_constraints_with_blob.json
bolt-cli/: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md
bolt-cli/src/: cli.rs  main.rs
bolt-cli/src/commands/: delegate.rs  fund.rs  generate.rs  mod.rs  operators.rs  pubkey_hash.rs  pubkeys.rs  register.rs  send.rs  validators.rs
bolt-cli/src/commands/delegate/: dirk.rs  keystore.rs  local.rs  mod.rs  types.rs  web3signer.rs
bolt-cli/src/commands/operators/: eigenlayer.rs  mod.rs  symbiotic.rs
bolt-cli/src/common/: bolt_manager.rs  dirk.rs  hash.rs  keystore.rs  mod.rs  signing.rs  web3signer.rs
bolt-cli/src/common/dirk/: distributed.rs  mod.rs  recover_signature.rs  test_util.rs
bolt-cli/src/common/signing/: commit_boost.rs  mod.rs
bolt-cli/src/contracts/: bolt.rs  eigenlayer.rs  erc20.rs  mod.rs  symbiotic.rs
bolt-cli/src/pb/: mod.rs  v1.rs
bolt-cli/test_data/: README.md  pubkeys.json
bolt-cli/test_data/dirk/: dirk.json
bolt-cli/test_data/dirk_multi/: .gitignore
bolt-cli/test_data/dirk_multi/1/: dirk.template.yml  dirk.yml
bolt-cli/test_data/dirk_multi/1/security/: localhost-1.crt  localhost-1.key
bolt-cli/test_data/dirk_multi/1/storage/: 000000.vlog  KEYREGISTRY  LOCK
bolt-cli/test_data/dirk_multi/1/wallets/94745cb3-e4d1-4c6c-841c-e413ae14ef9b/: 94745cb3-e4d1-4c6c-841c-e413ae14ef9b  b2825c01-8cda-438f-b0d6-b4bbab86612c  index
bolt-cli/test_data/dirk_multi/2/: dirk.template.yml  dirk.yml
bolt-cli/test_data/dirk_multi/2/security/: localhost-2.key
bolt-cli/test_data/dirk_multi/2/storage/: 000000.vlog  KEYREGISTRY  LOCK
bolt-cli/test_data/dirk_multi/2/wallets/d6eb3240-455a-4dac-bb5c-d91ab80ae692/: 99c7b5ca-59c8-498d-b3c2-d2795f903534  d6eb3240-455a-4dac-bb5c-d91ab80ae692  index
bolt-cli/test_data/dirk_multi/3/: dirk.template.yml  dirk.yml
bolt-cli/test_data/dirk_multi/3/security/: ca.crt  localhost-3.key
bolt-cli/test_data/dirk_multi/3/storage/: 000000.vlog  KEYREGISTRY  LOCK
bolt-cli/test_data/dirk_multi/3/wallets/3dd2374f-9dd6-4b19-88ea-c4827f1d053b/: 3dd2374f-9dd6-4b19-88ea-c4827f1d053b  ba347263-738a-46b6-a6af-3b92543f4a17  index
bolt-cli/test_data/dirk_multi/client/: localhost.crt  localhost.csr  localhost.key
bolt-cli/test_data/dirk_multi/gen_files/: dirk_authority.key  dirk_authority.srl  localhost-1.csr  localhost-1.ext  localhost-2.crt  localhost-2.csr  localhost-2.ext  localhost-3.crt  localhost-3.csr  localhost-3.ext
bolt-cli/test_data/dirk_single/: .gitignore  dirk.json
bolt-cli/test_data/dirk_single/storage/: 000000.vlog  KEYREGISTRY
bolt-contracts/: .gas-snapshot  README.md
bolt-contracts/test/: BoltChallenger.t.sol  BoltManager.EigenLayer.t.sol  BoltManager.Symbiotic.t.sol  BoltValidators.t.sol  BoltValidatorsV2.t.sol  BoltValidatorsV3.t.sol  Utils.sol
bolt-sidecar/: .dockerignore  .env.example  Cargo.toml  Cross.Dockerfile  Cross.toml  Dockerfile  Dockerfile copy  DockerfileLocal  README.md  build.rs  test_access_list_functionality.rs
bolt-sidecar/benches/: score_cache.rs
bolt-sidecar/infra/grafana/provisioning/dashboards/: dashboard.json
bolt-sidecar/src/: common.rs  driver.rs  driver_test.rs  integration_test_access_list.rs  lib.rs  onchain_registry.rs  test_util.rs
bolt-sidecar/src/api/: builder.rs  mod.rs  spec.rs
bolt-sidecar/src/api/commitments/: firewall_recv.rs  firewall_stream.rs  handlers.rs  headers.rs  mod.rs  server.rs  spec.rs
bolt-sidecar/src/api/commitments/delegation/: jwt.rs  mod.rs  processor.rs  receiver.rs
bolt-sidecar/src/api/commitments/firewall/: jwt.rs  mod.rs  processor.rs  receiver.rs
bolt-sidecar/src/api/commitments/server/: handlers.rs  headers.rs  mod.rs  spec.rs  test_handlers.rs
bolt-sidecar/src/api/firewall/: jwt.rs  processor.rs  receiver.rs
bolt-sidecar/src/builder/: beacon.rs  compat.rs  mod.rs  payload_builder.rs  payload_fetcher.rs  signature.rs  template.rs
bolt-sidecar/src/builder/fallback/: engine_hinter.rs  mod.rs  payload_builder.rs
bolt-sidecar/src/builder/fallback/engine_hints/: geth.rs  mod.rs  nethermind.rs
bolt-sidecar/src/chain_io/: manager.rs  mod.rs  utils.rs
bolt-sidecar/src/client/: beacon.rs  constraints.rs  constraints_client.rs  engine.rs  execution.rs  mod.rs  rpc.rs
bolt-sidecar/src/common/: backoff.rs  mod.rs  score_cache.rs  secrets.rs  time.rs  transactions.rs
bolt-sidecar/src/config/: chain.rs  commitments.rs  constraint_signing.rs  limits.rs  mod.rs  telemetry.rs
bolt-sidecar/src/crypto/: bls.rs  ecdsa.rs
bolt-sidecar/src/primitives/: commitment.rs  constraint.rs  delegation.rs  diffs.rs  jsonrpc.rs  misc.rs  mod.rs  signature.rs  transaction.rs
bolt-sidecar/src/signer/: commit_boost.rs  keystore.rs  keystore_tests.rs  local.rs  mod.rs
bolt-sidecar/src/state/: account_state.rs  consensus.rs  execution.rs  fetcher.rs  head_tracker.rs  mod.rs  pricing.rs
bolt-sidecar/src/telemetry/: metrics.rs  mod.rs
boltup/: README.md  boltup.sh  install.sh
guides/holesky/: .gitignore  MIGRATION_v0.4.0.md  QUICK_START.md  README.md  bolt-sidecar.env.example  helix-config.yml
guides/mainnet-genesis/: README.md
scripts/: .gitignore  bolt-cli-tarballs.sh  cross-compile.sh  cross.Dockerfile  kurtosis_config.template.yaml  kurtosis_config.yaml  prepare-cross-compiler.sh  start-devnet.sh
testnets/devcon/: .bolt-sidecar.example.env  .cb.env  .gitignore  README.md  cb-config.toml  cb.docker-compose.yml  (+1 more)
(+64 files in other folders)
