[package]
name = "bolt-boost"
version = "0.3.0-alpha"
edition = "2021"

[profile.release]
lto = true
debug = true

[dependencies]
# core
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = "0.10.0"
futures = "0.3"
async-trait = "0.1.84"
eyre = "0.6.12"
thiserror = "2.0.9"
reqwest = "0.12.9"

# crypto
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "ec3073e" }
tree_hash = "0.8"

# tracing & metrics
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
prometheus = "0.13.4"

# serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
ethereum_ssz = "0.8.2"
ethereum_ssz_derive = "0.8.1"

# alloy
alloy = { version = "0.8.3", features = ["signer-local", "provider-trace-api", "rpc-types-beacon", "rpc-types-engine"] }
alloy-rlp = "0.3.10"

# commit-boost
# pinned to rev be able to bump alloy
cb-common = { git = "https://github.com/commit-boost/commit-boost-client", rev = "0f8f69b" }
cb-pbs = { git = "https://github.com/commit-boost/commit-boost-client", rev = "0f8f69b" }

# other
rand = "0.8.5"
parking_lot = "0.12.3"
lazy_static = "1.5.0"

[dev-dependencies]
# NOTE: we need this in order to play nice with Lighthouse types at version 6.0.1
ssz_compat = { version = "0.7.1", package = "ethereum_ssz" }
types = { git = "https://github.com/sigp/lighthouse", tag = "v6.0.1" }

[lints.clippy]
explicit_iter_loop = "warn"
if_not_else = "warn"
manual_let_else = "warn"
match_bool = "warn"
redundant_else = "warn"
unnecessary_self_imports = "warn"
use_self = "warn"
