[package]
name = "bolt"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"

# cli
clap = { version = "4.5.4", features = ["derive", "env"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

# grpc
rustls = { version = "0.23.15", features = ["ring"] }
tonic = { version = "0.12.3", features = ["tls"] }
prost = "0.13.3"

# crypto
blst = "0.3.12"
bls12_381 = "0.8.0"

# ethereum
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }
lighthouse_eth2_keystore = { package = "eth2_keystore", git = "https://github.com/sigp/lighthouse", rev = "a87f19d" }
alloy = { version = "0.7.3", features = [
    "full",
    "provider-anvil-api",
    "provider-anvil-node",
] }

# utils
dotenvy = "0.15.7"
eyre = "0.6.12"
thiserror = "2.0"
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.9", features = ["rustls-tls"] }
rand = "0.8.5"
lazy_static = "1.5.0"

[dev-dependencies]
tempfile = "3.13.0"
alloy-node-bindings = "0.7.0"

[build-dependencies]
tonic-build = "0.12.3"

[lints.clippy]
explicit_iter_loop = "warn"
if_not_else = "warn"
manual_let_else = "warn"
match_bool = "warn"
redundant_else = "warn"
unnecessary_self_imports = "warn"
use_self = "warn"
