[package]
name = "bolt-sidecar"
version = "0.3.0-alpha"
edition = "2021"
default-run = "bolt-sidecar"

[profile.release]
lto = true
debug = true

[dependencies]
# core
clap = { version = "4.5.20", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["timeout"] }
axum-extra = "0.9.3"
futures = "0.3"
tokio-retry = "0.3.0"

# crypto
blst = "0.3.12"
tree_hash = "0.5"
tree_hash_derive = "0.5"
secp256k1 = { version = "0.29.0", features = ["rand"] }
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "ec3073e" }
ethereum_ssz = "0.5"

# alloy
alloy = { version = "0.7.2", features = [
  "full",
  "provider-trace-api",
  "rpc-types-beacon",
  "rpc-types-engine",
] }
alloy-rpc-types-engine = { version = "0.7.2", default-features = false, features = [
  "jwt",
] }

# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.1.2" }

reqwest = "0.12"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }

# lighthouse
lighthouse_account_utils = { package = "account_utils", git = "https://github.com/sigp/lighthouse", rev = "a87f19d" }
lighthouse_eth2_keystore = { package = "eth2_keystore", git = "https://github.com/sigp/lighthouse", rev = "a87f19d" }
lighthouse_bls = { package = "bls", git = "https://github.com/sigp/lighthouse", rev = "a87f19d" }

# types
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
parking_lot = "0.12.1"
async-trait = "0.1.79"
bytes = "1.6.0"
hex = "0.4.3"

# utils
eyre = "0.6.12"
thiserror = "2.0"
rand = "0.8.5"
dotenvy = "0.15.7"
regex = "1.10.5"

# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

# telemetry
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15.3", features = [
  "http-listener",
] }

# commit-boost
commit-boost = { git = "https://github.com/Commit-Boost/commit-boost-client", rev = "45ce8f1" }
cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client", rev = "45ce8f1" }

[dev-dependencies]
alloy-node-bindings = "0.7.2"                                # must match alloy version
criterion = { version = "0.5", features = ["html_reports"] }

[package.metadata.cargo-machete]
ignored = ["ethereum_ssz"]


[[bench]]
name = "score_cache"
path = "benches/score_cache.rs"
harness = false


[[bin]]
name = "bolt-sidecar"
path = "bin/sidecar.rs"


[lints.clippy]
explicit_iter_loop = "warn"
if_not_else = "warn"
manual_let_else = "warn"
match_bool = "warn"
match_same_arms = "warn"
redundant_else = "warn"
unnecessary_self_imports = "warn"
use_self = "warn"
