[package]
name = "bolt-sidecar"
version = "0.3.0-alpha"
edition = "2021"
default-run = "bolt-sidecar"

[profile.release]
lto = true
debug = true

[dependencies]
# core
clap = { version = "4.5.20", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["timeout"] }
axum-extra = "0.9.6"
tower = "0.5.1"
http-body-util = "0.1.2"
futures = "0.3"
tokio-retry = "0.3.0"

# crypto
blst = "0.3.12"
tree_hash = "0.8"
tree_hash_derive = "0.8"
secp256k1 = { version = "0.29.0", features = ["rand"] }
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "ec3073e" }
ethereum_ssz = "0.8.1"

# alloy
alloy = { version = "0.8.0", features = [
  "full",
  "provider-trace-api",
  "rpc-types-beacon",
] }
alloy-rpc-types-engine = { version = "0.8.0", default-features = false, features = ["jwt"] }
alloy-transport-http = { version = "0.8.0", default-features = false, features = ["jwt-auth"] }
alloy-provider = { version = "0.8.0", default-features = false, features = ["engine-api"] }

# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.1.4" }

reqwest = "0.12"

ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "8fbd8a5" } # Last release in 2022
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "8fbd8a5" } # Last release in 2022

# lighthouse
lighthouse_account_utils = { package = "account_utils", git = "https://github.com/sigp/lighthouse", version = "0.1.0" }
lighthouse_eth2_keystore = { package = "eth2_keystore", git = "https://github.com/sigp/lighthouse", version = "0.1.0" }
lighthouse_bls = { package = "bls", git = "https://github.com/sigp/lighthouse", version = "0.2.0" }

# types
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.133"
parking_lot = "0.12.1"
async-trait = "0.1.79"
bytes = "1.6.0"
hex = "0.4.3"

# utils
eyre = "0.6.12"
thiserror = "2.0"
rand = "0.8.5"
dotenvy = "0.15.7"
regex = "1.10.5"

# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

# telemetry
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15.3", features = [
  "http-listener",
] }

# commit-boost
commit-boost = { git = "https://github.com/Commit-Boost/commit-boost-client", rev = "0f8f69b"  }
cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client", rev = "0f8f69b"  }

[dev-dependencies]
alloy-node-bindings = "0.8.0"                                # must match alloy version
criterion = { version = "0.5", features = ["html_reports"] }

[package.metadata.cargo-machete]
ignored = ["ethereum_ssz"]


[[bench]]
name = "score_cache"
path = "benches/score_cache.rs"
harness = false


[[bin]]
name = "bolt-sidecar"
path = "bin/sidecar.rs"


[lints.clippy]
explicit_iter_loop = "warn"
if_not_else = "warn"
manual_let_else = "warn"
match_bool = "warn"
match_same_arms = "warn"
redundant_else = "warn"
unnecessary_self_imports = "warn"
use_self = "warn"
