[package]
name = "bolt-sidecar"
version = "0.4.0-alpha"
edition = "2021"
description = "Validator sidecar software for bolt protocol"
authors = ["Chainbound Developers <dev@chainbound.io>"]
homepage = "https://github.com/chainbound/bolt"
repository = "https://github.com/chainbound/bolt/tree/unstable/bolt-sidecar"
default-run = "bolt-sidecar"

[profile.release]
lto = true
debug = true

[dependencies]
# cli
clap = { version = "4.5.27", features = ["derive", "env"] }

# web
axum = { version = "0.8.2", features = ["macros", "ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = ["timeout"] }
http-body-util = "0.1.2"
reqwest = "0.12"
tower = "0.5.1"

# tokio
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.1"
tokio-retry = "0.3.0"
futures = "0.3"

# crypto
blst = "0.3.12"
tree_hash = "0.9"
tree_hash_derive = "0.9"
secp256k1 = { version = "0.30.0", features = ["rand"] }

# alloy
alloy = { version = "0.9.2", features = ["full", "provider-trace-api", "rpc-types-beacon"] }
alloy-rpc-types-engine = { version = "0.9.2", default-features = false, features = ["jwt"] }
alloy-transport-http = { version = "0.9.2", default-features = false, features = ["jwt-auth"] }
alloy-provider = { version = "0.9.2", default-features = false, features = ["engine-api"] }

# commit-boost
cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client", tag = "v0.5.0" }

# ethereum-consensus
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "8fbd8a5" } # Last release in 2022
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "8fbd8a5" }  # Last release in 2022

# lighthouse
lighthouse_account_utils = { package = "account_utils", git = "https://github.com/sigp/lighthouse", version = "0.1.0" }
lighthouse_eth2_keystore = { package = "eth2_keystore", git = "https://github.com/sigp/lighthouse", version = "0.1.0" }
lighthouse_bls = { package = "bls", git = "https://github.com/sigp/lighthouse", version = "0.2.0" }

# types
uuid = { version = "1.12.1", features = ["v7", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
parking_lot = "0.12.1"
async-trait = "0.1.86"
hex = "0.4.3"

# utils
lazy_static = "1.5.0"
thiserror = "2.0"
eyre = "0.6.12"
rand = "0.8.5"
dotenvy = "0.15.7"
regex = "1.10.5"
jsonwebtoken = "9.3.0"
derive_more = "1.0.0"
rustls = "0.23.22"

# tracing
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing = "0.1.40"

# telemetry
metrics-exporter-prometheus = { version = "0.16.2", features = ["http-listener"] }
metrics = "0.24"

[dev-dependencies]
alloy-node-bindings = "0.9.2"                                # must match alloy version
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
built = { version = "0.7.5", features = ["git2"] }

[features]
keystore-tests = []

[package.metadata.cargo-machete]
ignored = ["ethereum_ssz"]

[[bench]]
name = "score_cache"
path = "benches/score_cache.rs"
harness = false

[[bin]]
name = "bolt-sidecar"
path = "bin/sidecar.rs"

[lints.clippy]
explicit_iter_loop = "warn"
if_not_else = "warn"
manual_let_else = "warn"
match_bool = "warn"
match_same_arms = "warn"
redundant_else = "warn"
unnecessary_self_imports = "warn"
use_self = "warn"
